[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "toomanythreads"
version = "0.1.0"
description = "A singleton-based thread management system with auto-registration and verbose logging"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Miles Copeland Luce"}
]
keywords = ["threading", "thread", "management", "singleton", "decorator", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Threading",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "loguru>=0.6.0",
    "singleton-decorator>=1.0.0",
]

[project.urls]
Repository = "https://github.com/genderlesspit/toomanythreads"